--- a/complete_process.ipynb
+++ b/complete_process.ipynb
@@ -2055,7 +2055,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.13 ('taka1')",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2069,12 +2069,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2932b575bb3a877f7f2eb58752af01fc0ca4cbf58bab91fbf4e91b10a7e35e59"
+    "hash": "908abd7e78fd4d71ba1be92795635fd82be5080a16e3cc7c1eae8bbfec458fa8"
    }
   }
  },
